pub/System/TimeTrackerPlugin/timetracker.css
table.TimeTrackerTable,
.TimeTrackerGeneralUtilities > table,
div.TimeTrackerMessage {
    border: 1px solid black;
}
div.TimeTrackerMessage {
    background-color: white;
    padding: 1px 3px;
    float: right;
}
.TimeTrackerError {
    background-color: red;
}
.TimeTrackerGeneralUtilities > table {
    margin-top: 5px;
}
table.TimeTrackerTable th {
    background-color: #ddf;
}
.TimeTrackerActive {
    background-color: #9d9;
    border: 1px solid black;
}
.TimeTrackerResume {
    border: 1px solid black;
    height: 100%;
    cursor: pointer;
}
.TimeTrackerBooked .TimeTrackerBordered {
    border: none;
}
.TimeTrackerValue {
    min-height: 1em;
}
.TimeTrackerBooked {
    background-color: #dff;
}
.TimeTrackerButton {
    background-color: #ddd;
    border: 1px solid #aaa;
    margin: 1px;
    padding: 1px;
    cursor: pointer;
}
span.TimeTrackerStarted {
    display: none;
}
.TimeTrackerBooked .TimeTrackerBook,
.TimeTrackerActive .TimeTrackerBook,
.TimeTrackerActive .TimeTrackerUnBook,
.TimeTrackerUnBook {
    display: none;
}
.TimeTrackerBooked .TimeTrackerUnBook {
    display: initial;
}
.TimeTrackerInRevision {
    display: none;
}
div.TimeTrackerTemplates, div.TimeTrackerQuickActions {
    float:left;
    border: 1px solid black;
    margin-left: 10px;
}
div.TimeTrackerGeneralUtilities {
    float: left;
}

